app/palette/css/style.css
html {
    overflow: hidden;
}
html, body {
    min-width: 0 !important;
    font-family:'Roboto', sans-serif;
    font-weight: 300 !important;
    height: 100%;
    height: 100%;
    overflow: hidden;
    position: relative;
}
h1, h2, h3, h4, h5, h6 {
    font-family:'Roboto', sans-serif;
}
p {
    font-weight: 300 !important;
}
a, a:hover {
    color: #697078;
}
a img {
    border: 0 !important;
    outline: 0;
}
a:hover {
    cursor: pointer;
}
.bold {
    font-weight: bold;
}
.row {
    max-width: none !important;
    height: 100%;
}
.wrapper {
    height: 100%;
}
.hidden {
    display: none;
}
#mainNav {
    background: #333;
    position: fixed;
    height: 67px;
    border-bottom: 7px solid #8D96A3;
    display: block;
    width: 100%;
    top: 0;
    z-index: 9001;
}
.container {
    width: 100%;
    display: block;
    position: relative;
    left: 0;
    margin: 0;
    height: 100%;
    padding: 0;
}
article.popup {
    position: fixed;
    top: 40%;
    text-align: center; 
    width:100%;
    margin:0 auto;
    display: none;
    z-index:10000;   
}
article.popup.visible {
    display: block;
}
article.popup .popup-body {
    margin: 0 auto;
    display: inline-block;
    border-radius: 10px;
    padding: 25px 45px;
    width: 90%;
    max-width: 600px; 
    margin:0 auto;
    background-color: #fff;
    position: relative;
    z-index: 9999;
}
article.popup .shade {
    content: "";
    display: block;
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0,0,0,0.2);
    z-index: 9998;
}
article.popup p {
    font-size: 28px;
}

.secondary-side-bar {
    height: 100%;
    display: block;
    position: fixed;
    top: 67px;
    left: 250px;
    width: 300px;
    background-color: #555A60;
    color: #fff;
    z-index: 20;
    color:#fff;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -ms-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    overflow-y:scroll;
    padding-bottom: 64px;
    max-width: 600px;
}
.secondary-side-bar.servers {
    width: 1px;
}
.secondary-side-bar.servers.servers-visible {
    width: 300px;
}
.secondary-side-bar h5, .secondary-side-bar h2 {
    width: 100%;
    padding: 0 0 0 25px;
    overflow: visible;
    white-space: nowrap;
    text-overflow:ellipsis;
    margin: 25px 0 8px 0;
    font-size: 16px;
    font-weight: 300;
}
.secondary-side-bar h2 {
    font-size: 32px;
}
.secondary-side-bar h5.sub {
    padding: 5px 0 0 25px;
    margin: 0 0 5px 0;
    color: #D3D3D3;
}
.secondary-side-bar h5.backup-page, .secondary-side-bar h5.logs-page {
    margin-top: 50px;
}
.secondary-side-bar h5 i {
    text-align: left;
    font-size: 28px;
    color: #8e96a3;
    vertical-align: middle;
}
.secondary-side-bar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.secondary-side-bar ul > li {
    padding: 0;
}

.secondary-side-bar ul > li.backup {
    color: #d3d3d3;
    padding: 0;
    margin: 0 0 5px 0;
    font-size: 16px;
    font-weight: 500;
}

.secondary-side-bar ul > li a {
    width: 100%;
    height: 100%;
    position: relative;
    display: block;
    padding: 12px 0 12px 25px;
    color: #fff;
    -webkit-transition: all 0.1s ease-in;
    -moz-transition: all 0.1s ease-in;
    -ms-transition: all 0.1s ease-in;
    -o-transition: all 0.1s ease-in;
    transition: all 0.1s ease-in;
}
.secondary-side-bar ul > li a:hover {
    background-color: rgba(250, 250, 250, 0.1);
    color: #fff;
    text-decoration: none;
}
.secondary-side-bar ul > li a.visible {
    background-color: rgba(250, 250, 250, 0.2);
}
.secondary-side-bar ul > li a.inactive, .secondary-side-bar ul.actions > li a.inactive, .secondary-side-bar ul.actions > li a.inactive i {
    color: #444;
}
.secondary-side-bar ul > li a.inactive:hover, .secondary-side-bar ul.actions > li a.inactive:hover, .secondary-side-bar ul.actions > li a.inactive:hover i {
    cursor: default;
    background: none;
    color: #444;
}
.secondary-side-bar ul > li a.inactive:active, .secondary-side-bar ul.actions > li a.inactive:active {
    box-shadow: 0 0;
}
.secondary-side-bar > ul > li > a > i {
    line-height: 40px;
    font-size: 40px;
    text-align: center;
    width: 40px;
    color: #8E96A3;
    position: relative;
}

.secondary-side-bar > ul > li > a > i.warning {
    color: #DC994C;
}
.secondary-side-bar > ul > li > a > i.running {
    color: #75E25A;
}
.secondary-side-bar > ul > li > a > i.stopped {
    color: #EF5455;
}
.secondary-side-bar ul.server-list > li i.green {
    color: #75e25a;
}
.secondary-side-bar ul.server-list > li i.yellow {
    color: #dc994c;
}
.secondary-side-bar ul.server-list > li i.red {
    color: #ef5455;
}

.secondary-side-bar ul > li h5 {
    position: relative;
    margin: 0 0 10px 0;
    padding: 0;
    font-size: 16px;
    font-weight: 300;
    width: 100%;
    overflow: hidden;
    text-overflow:ellipsis;
    white-space: nowrap;
    display: block;
    float: left;
}
.secondary-side-bar ul.server-list > li > a {
    height: 100px;
}
.secondary-side-bar ul.server-list > li > a > div {
    position: absolute;
    left:80px;
    top: 15px;
}
.secondary-side-bar ul.server-list > li > a > div > span {
    position: relative;
    margin: 0 0 0 0;
    font-size: 16px;
    font-weight: 300;
    color: #8e96a3;
    vertical-align: bottom;
    width: 100%;
    overflow: hidden;
    text-overflow:ellipsis;
    white-space: nowrap;
    display: block;
    float: left;
}
.secondary-side-bar ul.server-list > li > a > i {
    position: absolute;
    line-height: 100px;
    top: 0;
    left: 0;
    width: 80px;
    font-size: 50px;
}
.secondary-side-bar ul.Logs li a {
    padding: 0 25px;
    line-height: 32px;
    font-size: 14px;
    color: #D3D3D3;
}
.secondary-side-bar ul.Logs li a span.filename {
    display: none;
}
.secondary-side-bar ul.Logs {
    margin-bottom: 15px;
}
/* ... */

